9p: Fix initialisation of netfs_inode for 9p (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15658,6 +15658,7 @@
 	patches.suse/nvmet-re-fix-tracing-strncpy-warning.patch
 	patches.suse/nvme-trace-avoid-memcpy-overflow-warning.patch
 	patches.suse/nvmet-tcp-Fix-the-H2C-expected-PDU-len-calculation.patch
+	patches.suse/9p-Fix-initialisation-of-netfs_inode-for-9p.patch
 	patches.suse/ceph-select-FS_ENCRYPTION_ALGS-if-FS_ENCRYPTION.patch
 	patches.suse/apparmor-fix-possible-memory-leak-in-unpack_trans_ta.patch
 	patches.suse/apparmor-avoid-crash-when-parsed-profile-name-is-emp.patch
