Bluetooth: qca: Set both WIDEBAND_SPEECH and LE_STATES quirks for QCA2066 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15138,6 +15138,7 @@
 	patches.suse/wifi-iwlwifi-mvm-send-TX-path-flush-in-rfkill.patch
 	patches.suse/wifi-iwlwifi-fix-out-of-bound-copy_from_user.patch
 	patches.suse/wifi-iwlwifi-assign-phy_ctxt-before-eSR-activation.patch
+	patches.suse/Bluetooth-qca-Set-both-WIDEBAND_SPEECH-and-LE_STATES.patch
 	patches.suse/Bluetooth-Fix-bogus-check-for-re-auth-no-supported-w.patch
 	patches.suse/Bluetooth-btnxpuart-fix-recv_buf-return-value.patch
 	patches.suse/Bluetooth-btmtkuart-fix-recv_buf-return-value.patch
