clk: imx: clk-imx8qxp: fix LVDS bypass, pixel and phy clocks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15361,6 +15361,7 @@
 	patches.suse/clk-si5341-fix-an-error-code-problem-in-si5341_outpu.patch
 	patches.suse/clk-fixed-rate-fix-clk_hw_register_fixed_rate_with_a.patch
 	patches.suse/clk-samsung-Fix-kernel-doc-comments.patch
+	patches.suse/clk-imx-clk-imx8qxp-fix-LVDS-bypass-pixel-and-phy-cl.patch
 	patches.suse/clk-qcom-gpucc-sm8150-Update-the-gpu_cc_pll1-config.patch
 	patches.suse/clk-qcom-videocc-sm8150-Add-missing-PLL-config-prope.patch
 	patches.suse/clk-qcom-gcc-sm8550-Add-the-missing-RETAIN_FF_ENABLE.patch
