ACPI: NUMA: Fix the logic of getting the fake_pxm value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14746,6 +14746,7 @@
 	patches.suse/ACPI-extlog-fix-NULL-pointer-dereference-check.patch
 	patches.suse/ACPI-extlog-Clear-Extended-Error-Log-status-when-RAS.patch
 	patches.suse/ACPI-resource-Add-another-DMI-match-for-the-TongFang.patch
+	patches.suse/ACPI-NUMA-Fix-the-logic-of-getting-the-fake_pxm-valu.patch
 	patches.suse/ACPI-LPSS-Fix-the-fractional-clock-divider-flags.patch
 	patches.suse/thermal-core-Fix-NULL-pointer-dereference-in-zone-re.patch
 	patches.suse/dt-bindings-thermal-qcom-spmi-adc-tm5-hc-Fix-example.patch
