--- a/series.conf
+++ b/series.conf
@@ -15310,6 +15310,7 @@
 	patches.suse/drm-amd-display-avoid-stringop-overflow-warnings-for.patch
 	patches.suse/Revert-drm-amdkfd-Relocate-TBA-TMA-to-opposite-side-.patch
 	patches.suse/drm-amd-display-fix-bandwidth-validation-failure-on-.patch
+	patches.suse/ALSA-hda-Refer-to-correct-stream-index-at-loops.patch
 	patches.suse/PCI-add-INTEL_HDA_ARL-to-pci_ids.h.patch
 	patches.suse/ALSA-hda-Intel-add-HDA_ARL-PCI-ID-support.patch
 	patches.suse/ALSA-hda-cs35l41-Support-additional-Dell-models-with.patch
