--- a/series.conf
+++ b/series.conf
@@ -15313,6 +15313,7 @@
 	patches.suse/ALSA-hda-Refer-to-correct-stream-index-at-loops.patch
 	patches.suse/PCI-add-INTEL_HDA_ARL-to-pci_ids.h.patch
 	patches.suse/ALSA-hda-Intel-add-HDA_ARL-PCI-ID-support.patch
+	patches.suse/ALSA-hda-intel-dspcfg-add-filters-for-ARL-S-and-ARL.patch
 	patches.suse/ALSA-hda-cs35l41-Support-additional-Dell-models-with.patch
 	patches.suse/ALSA-hda-cs35l41-Prevent-firmware-load-if-SPI-speed-.patch
 	patches.suse/ALSA-hda-realtek-Add-quirks-for-Dell-models.patch
