--- a/series.conf
+++ b/series.conf
@@ -15144,6 +15144,7 @@
 	patches.suse/Bluetooth-btnxpuart-fix-recv_buf-return-value.patch
 	patches.suse/Bluetooth-btmtkuart-fix-recv_buf-return-value.patch
 	patches.suse/Bluetooth-hci_sync-fix-BR-EDR-wakeup-bug.patch
+	patches.suse/Bluetooth-L2CAP-Fix-possible-multiple-reject-send.patch
 	patches.suse/Bluetooth-Fix-atomicity-violation-in-min-max-_key_si.patch
 	patches.suse/bnxt_en-Refactor-bnxt_ntuple_filter-structure.patch
 	patches.suse/bnxt_en-Add-bnxt_l2_filter-hash-table.patch
