crypto: octeontx2 - Fix cptvf driver cleanup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14794,6 +14794,7 @@
 	patches.suse/crypto-hisilicon-qm-save-capability-registers-in-qm-.patch
 	patches.suse/crypto-s390-aes-Fix-buffer-overread-in-CTR-mode.patch
 	patches.suse/crypto-api-Disallow-identical-driver-names.patch
+	patches.suse/crypto-octeontx2-Fix-cptvf-driver-cleanup.patch
 	patches.suse/crypto-virtio-Wait-for-tasklet-to-complete-on-device.patch
 	patches.suse/crypto-shash-remove-excess-kerneldoc-members.patch
 	patches.suse/crypto-sahara-handle-zero-length-aes-requests.patch
