--- a/series.conf
+++ b/series.conf
@@ -15307,6 +15307,7 @@
 	patches.suse/drm-msm-dsi-Use-pm_runtime_resume_and_get-to-prevent.patch
 	patches.suse/drm-msm-dsi-Enable-runtime-PM.patch
 	patches.suse/drm-msm-dpu-correct-clk-bit-for-WB2-block.patch
+	patches.suse/drm-msm-dp-Add-DisplayPort-controller-for-SM8650.patch
 	patches.suse/drm-msm-adreno-Fix-A680-chip-id.patch
 	patches.suse/drm-msm-dpu-rename-dpu_encoder_phys_wb_setup_cdp-to-.patch
 	patches.suse/drm-msm-dpu-Set-input_sel-bit-for-INTF.patch
