--- a/series.conf
+++ b/series.conf
@@ -15293,6 +15293,7 @@
 	patches.suse/drm-radeon-trinity_dpm-fix-a-memleak-in-trinity_pars.patch
 	patches.suse/drm-panel-st7701-Fix-AVCL-calculation.patch
 	patches.suse/Revert-drm-rockchip-vop2-Use-regcache_sync-to-fix-su.patch
+	patches.suse/drm-amd-display-For-prefetch-mode-0-extend-prefetch-.patch
 	patches.suse/drm-amdgpu-debugfs-fix-error-code-when-smc-register-.patch
 	patches.suse/drm-amd-pm-fix-a-double-free-in-si_dpm_init.patch
 	patches.suse/drivers-amd-pm-fix-a-use-after-free-in-kv_parse_powe.patch
