drm/panel-edp: Add override_edid_mode quirk for generic edp (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15267,6 +15267,7 @@
 	patches.suse/drm-Allow-drivers-to-indicate-the-damage-helpers-to-.patch
 	patches.suse/drm-virtio-Disable-damage-clipping-if-FB-changed-sin.patch
 	patches.suse/drm-bridge-Fix-typo-in-post_disable-description.patch
+	patches.suse/drm-panel-edp-Add-override_edid_mode-quirk-for-gener.patch
 	patches.suse/fbdev-acornfb-Fix-name-of-fb_ops-initializer-macro.patch
 	patches.suse/drm-tidss-Move-reset-to-the-end-of-dispc_init.patch
 	patches.suse/drm-tidss-Return-error-value-from-from-softreset.patch
