--- a/series.conf
+++ b/series.conf
@@ -15295,6 +15295,7 @@
 	patches.suse/Revert-drm-rockchip-vop2-Use-regcache_sync-to-fix-su.patch
 	patches.suse/drm-amd-display-For-prefetch-mode-0-extend-prefetch-.patch
 	patches.suse/drm-amdkfd-fix-mes-set-shader-debugger-process-manag.patch
+	patches.suse/drm-amdgpu-fix-ftrace-event-amdgpu_bo_move-always-mo.patch
 	patches.suse/drm-amdgpu-debugfs-fix-error-code-when-smc-register-.patch
 	patches.suse/drm-amd-pm-fix-a-double-free-in-si_dpm_init.patch
 	patches.suse/drivers-amd-pm-fix-a-use-after-free-in-kv_parse_powe.patch
