--- a/series.conf
+++ b/series.conf
@@ -15311,6 +15311,7 @@
 	patches.suse/drm-msm-adreno-Fix-A680-chip-id.patch
 	patches.suse/drm-msm-dpu-enable-writeback-on-SM8350.patch
 	patches.suse/drm-msm-dpu-enable-writeback-on-SM8450.patch
+	patches.suse/drm-msm-dpu-Ratelimit-framedone-timeout-msgs.patch
 	patches.suse/drm-msm-dpu-rename-dpu_encoder_phys_wb_setup_cdp-to-.patch
 	patches.suse/drm-msm-dpu-Set-input_sel-bit-for-INTF.patch
 	patches.suse/drm-msm-dpu-Drop-enable-and-frame_count-parameters-f.patch
