--- a/series.conf
+++ b/series.conf
@@ -12936,6 +12936,7 @@
 	patches.suse/selftests-resctrl-Move-_GNU_SOURCE-define-into-Makef.patch
 	patches.suse/selftests-resctrl-Reduce-failures-due-to-outliers-in.patch
 	patches.suse/selftests-efivarfs-create-read-fix-a-resource-leak.patch
+	patches.suse/Documentation-sphinx-fix-Python-string-escapes.patch
 	patches.suse/docs-admin-guide-sysctl-fix-details-of-struct-dentry.patch
 	patches.suse/scripts-kernel-doc-match-Werror-flag-strictly.patch
 	patches.suse/docs-usb-fix-reference-to-nonexistent-file-in-UVC-Ga.patch
