drm/msm/dsi: Enable runtime PM (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15305,6 +15305,7 @@
 	patches.suse/drm-msm-mdp4-flush-vblank-event-on-disable.patch
 	patches.suse/drm-msm-dpu-Add-missing-safe_lut_tbl-in-sc8180x-cata.patch
 	patches.suse/drm-msm-dsi-Use-pm_runtime_resume_and_get-to-prevent.patch
+	patches.suse/drm-msm-dsi-Enable-runtime-PM.patch
 	patches.suse/drm-msm-dpu-correct-clk-bit-for-WB2-block.patch
 	patches.suse/drm-msm-adreno-Fix-A680-chip-id.patch
 	patches.suse/drm-msm-dpu-rename-dpu_encoder_phys_wb_setup_cdp-to-.patch
