--- a/series.conf
+++ b/series.conf
@@ -15285,6 +15285,7 @@
 	patches.suse/drm-framebuffer-Fix-use-of-uninitialized-variable.patch
 	patches.suse/drm-bridge-cdns-mhdp8546-Fix-use-of-uninitialized-va.patch
 	patches.suse/drm-bridge-tc358767-Fix-return-value-on-error-case.patch
+	patches.suse/drm-mipi-dsi-Fix-detach-call-without-attach.patch
 	patches.suse/drm-radeon-check-the-alloc_workqueue-return-value-in.patch
 	patches.suse/drm-radeon-dpm-fix-a-memleak-in-sumo_parse_power_tab.patch
 	patches.suse/drm-radeon-trinity_dpm-fix-a-memleak-in-trinity_pars.patch
