--- a/series.conf
+++ b/series.conf
@@ -15301,6 +15301,7 @@
 	patches.suse/drivers-amd-pm-fix-a-use-after-free-in-kv_parse_powe.patch
 	patches.suse/gpu-drm-radeon-fix-two-memleaks-in-radeon_vm_init.patch
 	patches.suse/drm-amd-pm-fix-a-double-free-in-amdgpu_parse_extende.patch
+	patches.suse/drm-amdkfd-only-flush-mes-process-context-if-mes-sup.patch
 	patches.suse/drm-msm-mdp4-flush-vblank-event-on-disable.patch
 	patches.suse/drm-msm-dpu-Add-missing-safe_lut_tbl-in-sc8180x-cata.patch
 	patches.suse/drm-msm-dsi-Use-pm_runtime_resume_and_get-to-prevent.patch
