drm/framebuffer: Fix use of uninitialized variable (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15282,6 +15282,7 @@
 	patches.suse/drm-Fix-TODO-list-mentioning-non-KMS-drivers.patch
 	patches.suse/drm-bridge-nxp-ptn3460-simplify-some-error-checking.patch
 	patches.suse/drm-drm_file-fix-use-of-uninitialized-variable.patch
+	patches.suse/drm-framebuffer-Fix-use-of-uninitialized-variable.patch
 	patches.suse/drm-bridge-cdns-mhdp8546-Fix-use-of-uninitialized-va.patch
 	patches.suse/drm-bridge-tc358767-Fix-return-value-on-error-case.patch
 	patches.suse/drm-radeon-check-the-alloc_workqueue-return-value-in.patch
