--- a/series.conf
+++ b/series.conf
@@ -16259,6 +16259,7 @@
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
 	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
 	patches.suse/iommu-Allow-ops-default_domain-to-work-when-CONFIG_IOMMU_DMA
+	patches.suse/drm-tegra-Do-not-assume-that-a-NULL-domain-means-no-DMA-IOMMU
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LEDs-for-HP-ZBook-.patch
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12TX-tran.patch
