hwmon: (nct6775) Fix fan speed set failure in automatic mode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15373,6 +15373,7 @@
 	patches.suse/kselftest-alsa-mixer-test-Fix-the-print-format-speci-f77a255.patch
 	patches.suse/kselftest-alsa-conf-Stringify-the-printed-errno-in-s.patch
 	patches.suse/ABI-sysfs-class-hwmon-fix-tempY_crit_alarm-access-ri.patch
+	patches.suse/hwmon-nct6775-Fix-fan-speed-set-failure-in-automatic.patch
 	patches.suse/watchdog-set-cdev-owner-before-adding.patch
 	patches.suse/watchdog-hpwdt-Only-claim-UNKNOWN-NMI-if-from-iLO.patch
 	patches.suse/watchdog-hpwdt-Remove-redundant-test.patch
