--- a/series.conf
+++ b/series.conf
@@ -15333,6 +15333,7 @@
 	patches.suse/drm-amdgpu-Fix-fw-from-request_firmware-not-released.patch
 	patches.suse/drm-amdkfd-Confirm-list-is-non-empty-before-utilizin.patch
 	patches.suse/drm-amdgpu-Drop-fence-check-in-to_amdgpu_amdkfd_fenc.patch
+	patches.suse/drm-amdkfd-Fix-iterator-used-outside-loop-in-kfd_add.patch
 	patches.suse/drm-amd-pm-smu7-fix-a-memleak-in-smu7_hwmgr_backend_.patch
 	patches.suse/drm-amd-display-avoid-stringop-overflow-warnings-for.patch
 	patches.suse/Revert-drm-amdkfd-Relocate-TBA-TMA-to-opposite-side-.patch
