drm/amdkfd: Fix 'node' NULL check in 'svm_range_get_range_boundaries()' (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15706,6 +15706,7 @@
 	patches.suse/drm-amdgpu-Fix-with-right-return-code-EIO-in-amdgpu_.patch
 	patches.suse/drm-amdgpu-Release-adev-pm.fw-before-return-in-amdgp.patch
 	patches.suse/drm-amd-display-Fix-variable-deferencing-before-NULL.patch
+	patches.suse/drm-amdkfd-Fix-node-NULL-check-in-svm_range_get_rang.patch
 	patches.suse/drm-amd-display-Fix-late-derefrence-dsc-check-in-lin.patch
 	patches.suse/drm-amd-display-Port-DENTIST-hang-and-TDR-fixes-to-O.patch
 	patches.suse/drm-amd-display-Align-the-returned-error-code-with-l.patch
