--- a/series.conf
+++ b/series.conf
@@ -15325,6 +15325,7 @@
 	patches.suse/accel-habanalabs-fix-information-leak-in-sec_attest_.patch
 	patches.suse/drm-Don-t-unref-the-same-fb-many-times-by-mistake-du.patch
 	patches.suse/drm-rockchip-vop2-Avoid-use-regmap_reinit_cache-at-r.patch
+	patches.suse/drm-amd-display-make-flip_timestamp_in_us-a-64-bit-v.patch
 	patches.suse/drm-amdkfd-Fix-type-of-dbg_flags-in-struct-kfd_proce.patch
 	patches.suse/drm-amdkfd-Confirm-list-is-non-empty-before-utilizin.patch
 	patches.suse/drm-amd-pm-smu7-fix-a-memleak-in-smu7_hwmgr_backend_.patch
