--- a/series.conf
+++ b/series.conf
@@ -15328,6 +15328,7 @@
 	patches.suse/drm-amd-display-make-flip_timestamp_in_us-a-64-bit-v.patch
 	patches.suse/drm-amdgpu-Fix-ecc-irq-enable-disable-unpaired.patch
 	patches.suse/drm-amd-display-Fix-minor-issues-in-BW-Allocation-Ph.patch
+	patches.suse/drm-amdgpu-Let-KFD-sync-with-VM-fences.patch
 	patches.suse/drm-amdkfd-Fix-type-of-dbg_flags-in-struct-kfd_proce.patch
 	patches.suse/drm-amdkfd-Confirm-list-is-non-empty-before-utilizin.patch
 	patches.suse/drm-amd-pm-smu7-fix-a-memleak-in-smu7_hwmgr_backend_.patch
