--- a/series.conf
+++ b/series.conf
@@ -15700,6 +15700,7 @@
 	patches.suse/drm-amdkfd-Fix-lock-dependency-warning-with-srcu.patch
 	patches.suse/Revert-drm-amd-display-fix-bandwidth-validation-fail.patch
 	patches.suse/drm-amdkfd-fixes-for-HMM-mem-allocation.patch
+	patches.suse/drm-amdgpu-fix-avg-vs-input-power-reporting-on-smu7.patch
 	patches.suse/drm-amdgpu-fall-back-to-INPUT-power-for-AVG-power-vi.patch
 	patches.suse/drm-amd-display-Fix-variable-deferencing-before-NULL.patch
 	patches.suse/drm-amd-display-Fix-late-derefrence-dsc-check-in-lin.patch
