drm/amdgpu: Fix '*fw' from request_firmware() not released in 'amdgpu_ucode_request()' (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15330,6 +15330,7 @@
 	patches.suse/drm-amd-display-Fix-minor-issues-in-BW-Allocation-Ph.patch
 	patches.suse/drm-amdgpu-Let-KFD-sync-with-VM-fences.patch
 	patches.suse/drm-amdkfd-Fix-type-of-dbg_flags-in-struct-kfd_proce.patch
+	patches.suse/drm-amdgpu-Fix-fw-from-request_firmware-not-released.patch
 	patches.suse/drm-amdkfd-Confirm-list-is-non-empty-before-utilizin.patch
 	patches.suse/drm-amd-pm-smu7-fix-a-memleak-in-smu7_hwmgr_backend_.patch
 	patches.suse/drm-amd-display-avoid-stringop-overflow-warnings-for.patch
