--- a/series.conf
+++ b/series.conf
@@ -15337,6 +15337,7 @@
 	patches.suse/drm-amd-pm-smu7-fix-a-memleak-in-smu7_hwmgr_backend_.patch
 	patches.suse/drm-amd-display-avoid-stringop-overflow-warnings-for.patch
 	patches.suse/Revert-drm-amdkfd-Relocate-TBA-TMA-to-opposite-side-.patch
+	patches.suse/drm-amdgpu-apply-the-RV2-system-aperture-fix-to-RN-C.patch
 	patches.suse/drm-amd-display-fix-bandwidth-validation-failure-on-.patch
 	patches.suse/ALSA-hda-Refer-to-correct-stream-index-at-loops.patch
 	patches.suse/PCI-add-INTEL_HDA_ARL-to-pci_ids.h.patch
