--- a/series.conf
+++ b/series.conf
@@ -15697,6 +15697,7 @@
 	patches.suse/power-supply-cw2015-correct-time_to_empty-units-in-s.patch
 	patches.suse/drm-amdkfd-Fix-lock-dependency-warning.patch
 	patches.suse/drm-amdgpu-correct-the-cu-count-for-gfx-v11.patch
+	patches.suse/drm-amdkfd-Fix-lock-dependency-warning-with-srcu.patch
 	patches.suse/Revert-drm-amd-display-fix-bandwidth-validation-fail.patch
 	patches.suse/drm-amdkfd-fixes-for-HMM-mem-allocation.patch
 	patches.suse/drm-amdgpu-fall-back-to-INPUT-power-for-AVG-power-vi.patch
