--- a/series.conf
+++ b/series.conf
@@ -15702,6 +15702,7 @@
 	patches.suse/drm-amdkfd-fixes-for-HMM-mem-allocation.patch
 	patches.suse/drm-amdgpu-fix-avg-vs-input-power-reporting-on-smu7.patch
 	patches.suse/drm-amdgpu-fall-back-to-INPUT-power-for-AVG-power-vi.patch
+	patches.suse/drm-amd-powerplay-Fix-kzalloc-parameter-ATOM_Tonga_P.patch
 	patches.suse/drm-amd-display-Fix-variable-deferencing-before-NULL.patch
 	patches.suse/drm-amd-display-Fix-late-derefrence-dsc-check-in-lin.patch
 	patches.suse/drm-amd-display-Port-DENTIST-hang-and-TDR-fixes-to-O.patch
