drm/amdgpu: Fix ecc irq enable/disable unpaired (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15326,6 +15326,7 @@
 	patches.suse/drm-Don-t-unref-the-same-fb-many-times-by-mistake-du.patch
 	patches.suse/drm-rockchip-vop2-Avoid-use-regmap_reinit_cache-at-r.patch
 	patches.suse/drm-amd-display-make-flip_timestamp_in_us-a-64-bit-v.patch
+	patches.suse/drm-amdgpu-Fix-ecc-irq-enable-disable-unpaired.patch
 	patches.suse/drm-amdkfd-Fix-type-of-dbg_flags-in-struct-kfd_proce.patch
 	patches.suse/drm-amdkfd-Confirm-list-is-non-empty-before-utilizin.patch
 	patches.suse/drm-amd-pm-smu7-fix-a-memleak-in-smu7_hwmgr_backend_.patch
