--- a/series.conf
+++ b/series.conf
@@ -15667,6 +15667,7 @@
 	patches.suse/rtc-Extend-timeout-for-waiting-for-UIP-to-clear-to-1.patch
 	patches.suse/i2c-s3c24xx-fix-read-transfers-in-polling-mode.patch
 	patches.suse/i2c-s3c24xx-fix-transferring-more-than-one-message-i.patch
+	patches.suse/i2c-rk3x-Adjust-mask-value-offset-for-i2c2-on-rv1126.patch
 	patches.suse/octeontx2-af-CN10KB-Fix-FIFO-length-calculation-for-.patch
 	patches.suse/net-phy-micrel-populate-.soft_reset-for-KSZ9131.patch
 	patches.suse/selftests-bonding-Change-script-interpreter.patch
