libsubcmd: Fix memory leak in uniq() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15760,6 +15760,7 @@
 	patches.suse/perf-tools-Add-branch-counter-knob.patch
 	patches.suse/perf-test-Basic-branch-counter-support.patch
 	patches.suse/libapi-Add-missing-linux-types.h-header-to-get-the-_.patch
+	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
 	patches.suse/dmaengine-idxd-Move-dma_free_coherent-out-of-spinloc.patch
 	patches.suse/clocksource-drivers-timer-ti-dm-Fix-make-W-n-kerneld.patch
