--- a/series.conf
+++ b/series.conf
@@ -15569,6 +15569,7 @@
 	patches.suse/iio-adc-ad7091r-Set-alert-bit-in-config-register.patch
 	patches.suse/iio-adc-ad7091r-Allow-users-to-configure-device-even.patch
 	patches.suse/iio-adc-ad7091r-Enable-internal-vref-if-external-vre.patch
+	patches.suse/misc-lis3lv02d_i2c-Add-missing-setting-of-the-reg_ct.patch
 	patches.suse/scripts-tags.sh-Update-comment-addition-of-gtags.patch
 	patches.suse/uio-Fix-use-after-free-in-uio_open.patch
 	patches.suse/driver-core-make-device_is_dependent-static.patch
