--- a/series.conf
+++ b/series.conf
@@ -15211,6 +15211,7 @@
 	patches.suse/soc-fsl-cpm1-qmc-Fix-rx-channel-reset.patch
 	patches.suse/soc-fsl-cpm1-qmc-Remove-inline-function-specifiers.patch
 	patches.suse/soc-xilinx-Fix-for-call-trace-due-to-the-usage-of-sm.patch
+	patches.suse/soc-xilinx-fix-unhandled-SGI-warning-message.patch
 	patches.suse/firmware-ti_sci-Fix-an-off-by-one-in-ti_sci_debugfs_.patch
 	patches.suse/soc-qcom-pmic_glink_altmode-fix-port-sanity-check.patch
 	patches.suse/soc-qcom-llcc-Fix-dis_cap_alloc-and-retain_on_pc-con.patch
