--- a/series.conf
+++ b/series.conf
@@ -15536,6 +15536,7 @@
 	patches.suse/mfd-intel-lpss-Revert-Add-missing-check-for-platform.patch
 	patches.suse/mfd-syscon-Fix-null-pointer-dereference-in-of_syscon.patch
 	patches.suse/mfd-intel-lpss-Fix-the-fractional-clock-divider-flag.patch
+	patches.suse/mfd-ti_am335x_tscadc-Fix-TI-SoC-dependencies.patch
 	patches.suse/leds-aw2013-Select-missing-dependency-REGMAP_I2C.patch
 	patches.suse/leds-ledtrig-tty-Free-allocated-ttyname-buffer-on-de.patch
 	patches.suse/pinctrl-intel-Revert-Unexport-intel_pinctrl_probe.patch
