--- a/series.conf
+++ b/series.conf
@@ -15498,6 +15498,7 @@
 	patches.suse/media-cx231xx-fix-a-memleak-in-cx231xx_init_isoc.patch
 	patches.suse/media-stk1160-Fixed-high-volume-of-stk1160_dbg-messa.patch
 	patches.suse/media-rockchip-rga-fix-swizzling-for-RGB-formats.patch
+	patches.suse/media-uvcvideo-Fix-power-line-control-for-a-Chicony-.patch
 	patches.suse/media-imx-mipi-csis-Fix-clock-handling-in-remove.patch
 	patches.suse/media-dt-bindings-media-rkisp1-Fix-the-port-descript.patch
 	patches.suse/media-rkisp1-Fix-media-device-memory-leak.patch
