--- a/series.conf
+++ b/series.conf
@@ -15508,6 +15508,7 @@
 	patches.suse/media-rkisp1-Store-IRQ-lines.patch
 	patches.suse/media-rkisp1-Fix-IRQ-disable-race-issue.patch
 	patches.suse/media-rkisp1-resizer-Stop-manual-allocation-of-v4l2_.patch
+	patches.suse/media-amphion-remove-mutext-lock-in-condition-of-wai.patch
 	patches.suse/media-dvbdev-drop-refcount-on-error-path-in-dvb_devi.patch
 	patches.suse/media-dvb-frontends-m88ds3103-Fix-a-memory-leak-in-a.patch
 	patches.suse/media-dt-bindings-ov8856-decouple-lanes-and-link-fre.patch
