--- a/series.conf
+++ b/series.conf
@@ -15504,6 +15504,7 @@
 	patches.suse/media-dt-bindings-media-rkisp1-Fix-the-port-descript.patch
 	patches.suse/media-rkisp1-Fix-media-device-memory-leak.patch
 	patches.suse/media-rkisp1-Drop-IRQF_SHARED.patch
+	patches.suse/media-rkisp1-Fix-IRQ-handler-return-values.patch
 	patches.suse/media-dvbdev-drop-refcount-on-error-path-in-dvb_devi.patch
 	patches.suse/media-dvb-frontends-m88ds3103-Fix-a-memory-leak-in-a.patch
 	patches.suse/media-dt-bindings-ov8856-decouple-lanes-and-link-fre.patch
