--- a/series.conf
+++ b/series.conf
@@ -15540,6 +15540,7 @@
 	patches.suse/leds-aw2013-Select-missing-dependency-REGMAP_I2C.patch
 	patches.suse/leds-ledtrig-tty-Free-allocated-ttyname-buffer-on-de.patch
 	patches.suse/leds-trigger-panic-Don-t-register-panic-notifier-if-.patch
+	patches.suse/mailbox-arm_mhuv2-Fix-a-bug-for-mhuv2_sender_interru.patch
 	patches.suse/pinctrl-intel-Revert-Unexport-intel_pinctrl_probe.patch
 	patches.suse/PCI-P2PDMA-Remove-reference-to-pci_p2pdma_map_sg.patch
 	patches.suse/PCI-Avoid-potential-out-of-bounds-read-in-pci_dev_fo.patch
