--- a/series.conf
+++ b/series.conf
@@ -15511,6 +15511,7 @@
 	patches.suse/media-amphion-remove-mutext-lock-in-condition-of-wai.patch
 	patches.suse/media-dvbdev-drop-refcount-on-error-path-in-dvb_devi.patch
 	patches.suse/media-dvb-frontends-m88ds3103-Fix-a-memory-leak-in-a.patch
+	patches.suse/media-ddbridge-fix-an-error-code-problem-in-ddb_prob.patch
 	patches.suse/media-dt-bindings-ov8856-decouple-lanes-and-link-fre.patch
 	patches.suse/media-docs-uAPI-Fix-documentation-of-which-field-for.patch
 	patches.suse/fbdev-imxfb-fix-left-margin-setting.patch
