net: phy: at803x: fix passing the wrong reference for config_intr (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15009,6 +15009,7 @@
 	patches.suse/bnxt_en-Skip-nic-close-open-when-configuring-tstamp-.patch
 	patches.suse/bnxt_en-Make-PTP-TX-timestamp-HWRM-query-silent.patch
 	patches.suse/dpll-remove-leftover-mode_supported-op-and-use-mode_.patch
+	patches.suse/net-phy-at803x-fix-passing-the-wrong-reference-for-c.patch
 	patches.suse/ionic-pass-opcode-to-devcmd_wait.patch
 	patches.suse/ionic-keep-filters-across-FLR.patch
 	patches.suse/ionic-bypass-firmware-cmds-when-stuck-in-reset.patch
