--- a/series.conf
+++ b/series.conf
@@ -14750,6 +14750,7 @@
 	patches.suse/ACPI-resource-Add-another-DMI-match-for-the-TongFang.patch
 	patches.suse/ACPI-NUMA-Fix-the-logic-of-getting-the-fake_pxm-valu.patch
 	patches.suse/ACPI-LPSS-Fix-the-fractional-clock-divider-flags.patch
+	patches.suse/PNP-ACPI-fix-fortify-warning.patch
 	patches.suse/thermal-core-Fix-NULL-pointer-dereference-in-zone-re.patch
 	patches.suse/dt-bindings-thermal-qcom-spmi-adc-tm5-hc-Fix-example.patch
 	patches.suse/thermal-intel-hfi-Refactor-enabling-code-into-helper.patch
