--- a/series.conf
+++ b/series.conf
@@ -14726,6 +14726,7 @@
 	patches.suse/selinux-remove-the-wrong-comment-about-multithreaded.patch
 	patches.suse/selinux-Fix-error-priority-for-bind-with-AF_UNSPEC-o.patch
 	patches.suse/KEYS-encrypted-Add-check-for-strsep.patch
+	patches.suse/regulator-core-Only-increment-use_count-when-enable_.patch
 	patches.suse/spi-spi-zynqmp-gqspi-fix-driver-kconfig-dependencies.patch
 	patches.suse/ALSA-hda-cs35l56-Use-set-get-APIs-to-access-spi-chip.patch
 	patches.suse/mtd-Fix-gluebi-NULL-pointer-dereference-caused-by-ft.patch
