--- a/series.conf
+++ b/series.conf
@@ -14844,6 +14844,7 @@
 	patches.suse/octeon_ep-implement-xmit_more-in-transmit.patch
 	patches.suse/octeon_ep-remove-atomic-variable-usage-in-Tx-data-pa.patch
 	patches.suse/gve-add-gve_features_check.patch
+	patches.suse/net-phy-micrel-fix-ts_info-value-in-case-of-no-phc.patch
 	patches.suse/net-mlx5-print-change-on-SW-reset-semaphore-returns-.patch
 	patches.suse/net-mlx5-Allow-sync-reset-flow-when-BF-MGT-interface.patch
 	patches.suse/net-mlx5e-Some-cleanup-in-mlx5e_tc_stats_matchall.patch
