--- a/series.conf
+++ b/series.conf
@@ -15543,6 +15543,7 @@
 	patches.suse/mailbox-arm_mhuv2-Fix-a-bug-for-mhuv2_sender_interru.patch
 	patches.suse/pinctrl-intel-Revert-Unexport-intel_pinctrl_probe.patch
 	patches.suse/i3c-master-cdns-Update-maximum-prescaler-value-for-i.patch
+	patches.suse/PCI-AER-Decode-Requester-ID-when-no-error-info-found.patch
 	patches.suse/PCI-P2PDMA-Remove-reference-to-pci_p2pdma_map_sg.patch
 	patches.suse/PCI-Avoid-potential-out-of-bounds-read-in-pci_dev_fo.patch
 	patches.suse/PCI-Add-ACS-quirk-for-more-Zhaoxin-Root-Ports.patch
