--- a/series.conf
+++ b/series.conf
@@ -15548,6 +15548,7 @@
 	patches.suse/PCI-Fix-64GT-s-effective-data-rate-calculation.patch
 	patches.suse/PCI-P2PDMA-Remove-reference-to-pci_p2pdma_map_sg.patch
 	patches.suse/PCI-Avoid-potential-out-of-bounds-read-in-pci_dev_fo.patch
+	patches.suse/PCI-switchtec-Fix-stdev_release-crash-after-surprise.patch
 	patches.suse/PCI-Add-ACS-quirk-for-more-Zhaoxin-Root-Ports.patch
 	patches.suse/PCI-dwc-endpoint-Fix-dw_pcie_ep_raise_msix_irq-align.patch
 	patches.suse/PCI-keystone-Fix-race-condition-when-initializing-PH.patch
