wifi: rt2x00: correct wrong BBP register in RxDCOC calibration (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14905,6 +14905,7 @@
 	patches.suse/wifi-rtw88-fix-RX-filter-in-FIF_ALLMULTI-flag.patch
 	patches.suse/wifi-rt2x00-restart-beacon-queue-when-hardware-reset.patch
 	patches.suse/wifi-libertas-stop-selecting-wext.patch
+	patches.suse/wifi-rt2x00-correct-wrong-BBP-register-in-RxDCOC-cal.patch
 	patches.suse/net-page_pool-factor-out-uninit.patch
 	patches.suse/net-page_pool-id-the-page-pools.patch
 	patches.suse/net-page_pool-record-pools-per-netdev.patch
