--- a/series.conf
+++ b/series.conf
@@ -14752,6 +14752,7 @@
 	patches.suse/ACPI-LPSS-Fix-the-fractional-clock-divider-flags.patch
 	patches.suse/PNP-ACPI-fix-fortify-warning.patch
 	patches.suse/thermal-core-Fix-NULL-pointer-dereference-in-zone-re.patch
+	patches.suse/thermal-core-Fix-thermal-zone-suspend-resume-synchro.patch
 	patches.suse/dt-bindings-thermal-qcom-spmi-adc-tm5-hc-Fix-example.patch
 	patches.suse/thermal-intel-hfi-Refactor-enabling-code-into-helper.patch
 	patches.suse/thermal-intel-hfi-Disable-an-HFI-instance-when-all-i.patch
