wifi: ath9k: Fix potential array-index-out-of-bounds read in ath9k_htc_txstatus() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15079,6 +15079,7 @@
 	patches.suse/wifi-mwifiex-add-extra-delay-for-firmware-ready.patch
 	patches.suse/wifi-mwifiex-configure-BSSID-consistently-when-start.patch
 	patches.suse/wifi-ath11k-Defer-on-rproc_get-failure.patch
+	patches.suse/wifi-ath9k-Fix-potential-array-index-out-of-bounds-r.patch
 	patches.suse/xsk-Add-missing-SPDX-to-AF_XDP-TX-metadata-documenta.patch
 	patches.suse/net-xdp-Allow-metadata-32.patch
 	patches.suse/ice-make-RX-hash-reading-code-more-reusable.patch
