--- a/series.conf
+++ b/series.conf
@@ -15075,6 +15075,7 @@
 	patches.suse/wifi-mt76-mt7996-add-PCI-IDs-for-mt7992.patch
 	patches.suse/wifi-mt76-mt7921s-fix-workqueue-problem-causes-STA-a.patch
 	patches.suse/wifi-mt76-mt7921-fix-country-count-limitation-for-CL.patch
+	patches.suse/wifi-wfx-fix-possible-NULL-pointer-dereference-in-wf.patch
 	patches.suse/wifi-mwifiex-add-extra-delay-for-firmware-ready.patch
 	patches.suse/wifi-mwifiex-configure-BSSID-consistently-when-start.patch
 	patches.suse/wifi-ath11k-Defer-on-rproc_get-failure.patch
