wifi: ath12k: fix and enable AP mode for WCN7850 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15081,6 +15081,7 @@
 	patches.suse/wifi-ath11k-Defer-on-rproc_get-failure.patch
 	patches.suse/wifi-ath9k-Fix-potential-array-index-out-of-bounds-r.patch
 	patches.suse/wifi-ath11k-fix-race-due-to-setting-ATH11K_FLAG_EXT_.patch
+	patches.suse/wifi-ath12k-fix-and-enable-AP-mode-for-WCN7850.patch
 	patches.suse/xsk-Add-missing-SPDX-to-AF_XDP-TX-metadata-documenta.patch
 	patches.suse/net-xdp-Allow-metadata-32.patch
 	patches.suse/ice-make-RX-hash-reading-code-more-reusable.patch
