--- a/series.conf
+++ b/series.conf
@@ -15072,6 +15072,7 @@
 	patches.suse/wifi-mt76-mt7996-fix-the-size-of-struct-bss_rate_tlv.patch
 	patches.suse/wifi-mt76-mt7996-fix-rate-usage-of-inband-discovery-.patch
 	patches.suse/wifi-mt76-connac-fix-EHT-phy-mode-check.patch
+	patches.suse/wifi-mt76-mt7996-add-PCI-IDs-for-mt7992.patch
 	patches.suse/wifi-mt76-mt7921s-fix-workqueue-problem-causes-STA-a.patch
 	patches.suse/wifi-mt76-mt7921-fix-country-count-limitation-for-CL.patch
 	patches.suse/wifi-mwifiex-add-extra-delay-for-firmware-ready.patch
