--- a/series.conf
+++ b/series.conf
@@ -15568,6 +15568,7 @@
 	patches.suse/PCI-keystone-Fix-race-condition-when-initializing-PH.patch
 	patches.suse/PCI-mediatek-Clear-interrupt-status-before-dispatchi.patch
 	patches.suse/PCI-mediatek-gen3-Fix-translation-window-size-calcul.patch
+	patches.suse/spmi-mtk-pmif-Serialize-PMIF-status-check-and-comman.patch
 	patches.suse/parport-parport_serial-Add-Brainboxes-BAR-details.patch
 	patches.suse/parport-parport_serial-Add-Brainboxes-device-IDs-and.patch
 	patches.suse/bus-mhi-ep-Do-not-allocate-event-ring-element-on-sta.patch
