tty: allow TIOCSLCKTRMIOS with CAP_CHECKPOINT_RESTORE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15597,6 +15597,7 @@
 	patches.suse/serial-sccnxp-Improve-error-message-if-regulator_dis.patch
 	patches.suse/serial-sc16is7xx-improve-regmap-debugfs-by-using-one.patch
 	patches.suse/serial-imx-fix-tx-statemachine-deadlock.patch
+	patches.suse/tty-allow-TIOCSLCKTRMIOS-with-CAP_CHECKPOINT_RESTORE.patch
 	patches.suse/serial-sc16is7xx-remove-wasteful-static-buffer-in-sc.patch
 	patches.suse/serial-sc16is7xx-remove-global-regmap-from-struct-sc.patch
 	patches.suse/serial-sc16is7xx-remove-unused-line-structure-member.patch
