wifi: rtl8xxxu: Add additional USB IDs for RTL8192EU devices (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15141,6 +15141,7 @@
 	patches.suse/net-mlx5-Implement-management-PF-Ethernet-profile.patch
 	patches.suse/bpf-Use-c-unit_size-to-select-target-cache-during-fr.patch
 	patches.suse/net-device-move-gso_partial_features-to-net_device_r.patch
+	patches.suse/wifi-rtl8xxxu-Add-additional-USB-IDs-for-RTL8192EU-d.patch
 	patches.suse/wifi-rtlwifi-add-calculate_bit_shift.patch
 	patches.suse/wifi-rtlwifi-rtl8188ee-phy-using-calculate_bit_shift.patch
 	patches.suse/wifi-rtlwifi-rtl8192c-using-calculate_bit_shift.patch
