--- a/series.conf
+++ b/series.conf
@@ -15646,6 +15646,7 @@
 	patches.suse/Revert-usb-dwc3-don-t-reset-device-side-if-dwc3-was-.patch
 	patches.suse/usb-dwc3-gadget-Handle-EP0-request-dequeuing-properl.patch
 	patches.suse/usb-dwc-ep0-Update-request-status-in-dwc3_ep0_stall_.patch
+	patches.suse/usb-xhci-plat-fix-usb-disconnect-issue-after-s4.patch
 	patches.suse/usb-typec-tcpm-Support-multiple-capabilities.patch
 	patches.suse/usb-cdns3-fix-uvc-failure-work-since-sg-support-enab.patch
 	patches.suse/usb-cdns3-fix-iso-transfer-error-when-mult-is-not-ze.patch
