watchdog: it87_wdt: Keep WDTCTRL bit 3 unmodified for IT8784/IT8786 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15401,6 +15401,7 @@
 	patches.suse/watchdog-hpwdt-Remove-unused-variable.patch
 	patches.suse/watchdog-bcm2835_wdt-Fix-WDIOC_SETTIMEOUT-handling.patch
 	patches.suse/watchdog-rti_wdt-Drop-runtime-pm-reference-count-whe.patch
+	patches.suse/watchdog-it87_wdt-Keep-WDTCTRL-bit-3-unmodified-for-.patch
 	patches.suse/gpio-sysfs-fix-forward-declaration-of-struct-gpio_de.patch
 	patches.suse/gpio-xilinx-remove-excess-kernel-doc.patch
 	patches.suse/clk-renesas-rzg2l-cpg-Reuse-code-in-rzg2l_cpg_reset.patch
