wifi: cfg80211: fix RCU dereference in __cfg80211_bss_update (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15199,6 +15199,7 @@
 	patches.suse/ice-ice_base.c-Add-const-modifier-to-params-and-vars.patch
 	patches.suse/ice-Fix-some-null-pointer-dereference-issues-in-ice_.patch
 	patches.suse/bnxt_en-Fix-compile-error-without-CONFIG_RFS_ACCEL.patch
+	patches.suse/wifi-cfg80211-fix-RCU-dereference-in-__cfg80211_bss_.patch
 	patches.suse/wifi-cfg80211-correct-comment-about-MLD-ID.patch
 	patches.suse/wifi-cfg80211-parse-all-ML-elements-in-an-ML-probe-r.patch
 	patches.suse/dpll-expose-fractional-frequency-offset-value-to-use.patch
