--- a/series.conf
+++ b/series.conf
@@ -15569,6 +15569,7 @@
 	patches.suse/PCI-mediatek-Clear-interrupt-status-before-dispatchi.patch
 	patches.suse/PCI-mediatek-gen3-Fix-translation-window-size-calcul.patch
 	patches.suse/spmi-mtk-pmif-Serialize-PMIF-status-check-and-comman.patch
+	patches.suse/spmi-mediatek-Fix-UAF-on-device-remove.patch
 	patches.suse/parport-parport_serial-Add-Brainboxes-BAR-details.patch
 	patches.suse/parport-parport_serial-Add-Brainboxes-device-IDs-and.patch
 	patches.suse/bus-mhi-ep-Do-not-allocate-event-ring-element-on-sta.patch
