--- a/series.conf
+++ b/series.conf
@@ -14900,6 +14900,7 @@
 	patches.suse/octeon_ep-Solve-style-issues-in-control-net-files.patch
 	patches.suse/octeon_ep-get-max-rx-packet-length-from-firmware.patch
 	patches.suse/msft-hv-2920-net-mana-Add-remaining-GDMA-stats-for-MANA-to-ethtoo.patch
+	patches.suse/wifi-rtw89-fix-timeout-calculation-in-rtw89_roc_end.patch
 	patches.suse/wifi-plfxlc-check-for-allocation-failure-in-plfxlc_u.patch
 	patches.suse/wifi-rtw88-fix-RX-filter-in-FIF_ALLMULTI-flag.patch
 	patches.suse/wifi-libertas-stop-selecting-wext.patch
