wifi: rt2x00: restart beacon queue when hardware reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14903,6 +14903,7 @@
 	patches.suse/wifi-rtw89-fix-timeout-calculation-in-rtw89_roc_end.patch
 	patches.suse/wifi-plfxlc-check-for-allocation-failure-in-plfxlc_u.patch
 	patches.suse/wifi-rtw88-fix-RX-filter-in-FIF_ALLMULTI-flag.patch
+	patches.suse/wifi-rt2x00-restart-beacon-queue-when-hardware-reset.patch
 	patches.suse/wifi-libertas-stop-selecting-wext.patch
 	patches.suse/net-page_pool-factor-out-uninit.patch
 	patches.suse/net-page_pool-id-the-page-pools.patch
