--- a/series.conf
+++ b/series.conf
@@ -15062,6 +15062,7 @@
 	patches.suse/EDAC-mc-Add-support-for-HBM3-memory-type.patch
 	patches.suse/EDAC-amd64-Add-support-for-family-0x19-models-0x90-9f-devi.patch
 	patches.suse/x86-lib-Fix-overflow-when-counting-digits.patch
+	patches.suse/x86-barrier-Do-not-serialize-MSR-accesses-on-AMD
 	patches.suse/x86-mce-inject-Clear-test-status-value.patch
 	patches.suse/x86-mce-amd-EDAC-mce_amd-Move-long-names-to-decoder-module.patch
 	patches.suse/EDAC-mce_amd-Remove-SMCA-Extended-Error-code-descriptions.patch
