crypto: ccp: Provide an API to issue SEV and SNP commands (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16360,6 +16360,7 @@
 	patches.suse/x86-sev-Adjust-the-directmap-to-avoid-inadvertent-RMP-faults
 	patches.suse/crypto-ccp-Define-the-SEV-SNP-commands
 	patches.suse/crypto-ccp-Add-support-to-initialize-the-AMD-SP-for-SEV-SNP
+	patches.suse/crypto-ccp-Provide-an-API-to-issue-SEV-and-SNP-commands
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
