x86/CPU/AMD: Move Zenbleed check to the Zen2 init function (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -15070,6 +15070,7 @@
 	patches.suse/x86-CPU-AMD-Move-erratum-1076-fix-into-the-Zen1-init-function
 	patches.suse/x86-CPU-AMD-Call-the-spectral-chicken-in-the-Zen2-init-function
 	patches.suse/x86-CPU-AMD-Rename-init_amd_zn-to-init_amd_zen_common
+	patches.suse/x86-CPU-AMD-Move-Zenbleed-check-to-the-Zen2-init-function
 	patches.suse/x86-mce-inject-Clear-test-status-value.patch
 	patches.suse/x86-mce-amd-EDAC-mce_amd-Move-long-names-to-decoder-module.patch
 	patches.suse/EDAC-mce_amd-Remove-SMCA-Extended-Error-code-descriptions.patch
