--- a/series.conf
+++ b/series.conf
@@ -16349,6 +16349,7 @@
 	patches.suse/x86-sme-Fix-memory-encryption-setting-if-enabled-by-default-and-
 	patches.suse/x86-cpufeatures-Add-SEV-SNP-CPU-feature
 	patches.suse/x86-speculation-Do-not-enable-Automatic-IBRS-if-SEV-SNP-is-enabl
+	patches.suse/iommu-amd-Don-t-rely-on-external-callers-to-enable-IOMMU-SNP-sup
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
