crypto: ccp: Add panic notifier for SEV/SNP firmware shutdown on kdump (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16366,6 +16366,7 @@
 	patches.suse/crypto-ccp-Handle-non-volatile-INIT_EX-data-when-SNP-is-enabled
 	patches.suse/crypto-ccp-Handle-legacy-SEV-commands-when-SNP-is-enabled
 	patches.suse/iommu-amd-Clean-up-RMP-entries-for-IOMMU-pages-during-SNP-shutdo
+	patches.suse/crypto-ccp-Add-panic-notifier-for-SEV-SNP-firmware-shutdown-on-k
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
