--- a/series.conf
+++ b/series.conf
@@ -16369,6 +16369,7 @@
 	patches.suse/crypto-ccp-Add-panic-notifier-for-SEV-SNP-firmware-shutdown-on-k
 	patches.suse/KVM-SEV-Make-AVIC-backing-VMSA-and-VMCB-memory-allocation-SNP-sa
 	patches.suse/x86-cpufeatures-Enable-unmask-SEV-SNP-CPU-feature
+	patches.suse/crypto-ccp-Add-the-SNP_PLATFORM_STATUS-command
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
