crypto: ccp: Handle the legacy TMR allocation when SNP is enabled (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16362,6 +16362,7 @@
 	patches.suse/crypto-ccp-Add-support-to-initialize-the-AMD-SP-for-SEV-SNP
 	patches.suse/crypto-ccp-Provide-an-API-to-issue-SEV-and-SNP-commands
 	patches.suse/x86-sev-Introduce-an-SNP-leaked-pages-list
+	patches.suse/crypto-ccp-Handle-the-legacy-TMR-allocation-when-SNP-is-enabled
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
