x86/sev: Add RMP entry lookup helpers (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16352,6 +16352,7 @@
 	patches.suse/iommu-amd-Don-t-rely-on-external-callers-to-enable-IOMMU-SNP-sup
 	patches.suse/x86-sev-Add-SEV-SNP-host-initialization-support
 	patches.suse/x86-mtrr-Don-t-print-errors-if-MtrrFixDramModEn-is-set-when-SNP-
+	patches.suse/x86-sev-Add-RMP-entry-lookup-helpers
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
