--- a/series.conf
+++ b/series.conf
@@ -16359,6 +16359,7 @@
 	patches.suse/x86-sev-Add-helper-functions-for-RMPUPDATE-and-PSMASH-instructio
 	patches.suse/x86-sev-Adjust-the-directmap-to-avoid-inadvertent-RMP-faults
 	patches.suse/crypto-ccp-Define-the-SEV-SNP-commands
+	patches.suse/crypto-ccp-Add-support-to-initialize-the-AMD-SP-for-SEV-SNP
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
