crypto: ccp: Handle non-volatile INIT_EX data when SNP is enabled (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16363,6 +16363,7 @@
 	patches.suse/crypto-ccp-Provide-an-API-to-issue-SEV-and-SNP-commands
 	patches.suse/x86-sev-Introduce-an-SNP-leaked-pages-list
 	patches.suse/crypto-ccp-Handle-the-legacy-TMR-allocation-when-SNP-is-enabled
+	patches.suse/crypto-ccp-Handle-non-volatile-INIT_EX-data-when-SNP-is-enabled
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
