x86/mtrr: Don't print errors if MtrrFixDramModEn is set when SNP enabled (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16351,6 +16351,7 @@
 	patches.suse/x86-speculation-Do-not-enable-Automatic-IBRS-if-SEV-SNP-is-enabl
 	patches.suse/iommu-amd-Don-t-rely-on-external-callers-to-enable-IOMMU-SNP-sup
 	patches.suse/x86-sev-Add-SEV-SNP-host-initialization-support
+	patches.suse/x86-mtrr-Don-t-print-errors-if-MtrrFixDramModEn-is-set-when-SNP-
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
