crypto: ccp: Add the SNP_SET_CONFIG command (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16371,6 +16371,7 @@
 	patches.suse/x86-cpufeatures-Enable-unmask-SEV-SNP-CPU-feature
 	patches.suse/crypto-ccp-Add-the-SNP_PLATFORM_STATUS-command
 	patches.suse/crypto-ccp-Add-the-SNP_COMMIT-command
+	patches.suse/crypto-ccp-Add-the-SNP_SET_CONFIG-command
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
