--- a/series.conf
+++ b/series.conf
@@ -11872,6 +11872,7 @@
 	patches.suse/Input-powermate-fix-use-after-free-in-powermate_conf.patch
 	patches.suse/xfs-adjust-the-incore-perag-block_count-when-shrinking.patch
 	patches.suse/x86-resctrl-fix-kernel-doc-warnings.patch
+	patches.suse/x86-cpu-Fix-AMD-erratum-1485-on-Zen4-based-CPUs
 	patches.suse/x86-alternatives-disable-kasan-in-apply_alternatives.patch
 	patches.suse/cpu-hotplug-Provide-prototypes-for-arch-CPU-registra-c4dd854f.patch
 	patches.suse/powerpc-pseries-Fix-STK_PARAM-access-in-the-hcall-tr.patch
