--- a/series.conf
+++ b/series.conf
@@ -16353,6 +16353,7 @@
 	patches.suse/x86-sev-Add-SEV-SNP-host-initialization-support
 	patches.suse/x86-mtrr-Don-t-print-errors-if-MtrrFixDramModEn-is-set-when-SNP-
 	patches.suse/x86-sev-Add-RMP-entry-lookup-helpers
+	patches.suse/x86-fault-Add-helper-for-dumping-RMP-entries
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
