x86/traps: Define RMP violation #PF error code (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16354,6 +16354,7 @@
 	patches.suse/x86-mtrr-Don-t-print-errors-if-MtrrFixDramModEn-is-set-when-SNP-
 	patches.suse/x86-sev-Add-RMP-entry-lookup-helpers
 	patches.suse/x86-fault-Add-helper-for-dumping-RMP-entries
+	patches.suse/x86-traps-Define-RMP-violation-PF-error-code
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
