x86/sme: Fix memory encryption setting if enabled by default and not overridden (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16346,6 +16346,7 @@
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
 	patches.suse/x86-mm-Fix-memory-encryption-features-advertisement
+	patches.suse/x86-sme-Fix-memory-encryption-setting-if-enabled-by-default-and-
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
