--- a/series.conf
+++ b/series.conf
@@ -16350,6 +16350,7 @@
 	patches.suse/x86-cpufeatures-Add-SEV-SNP-CPU-feature
 	patches.suse/x86-speculation-Do-not-enable-Automatic-IBRS-if-SEV-SNP-is-enabl
 	patches.suse/iommu-amd-Don-t-rely-on-external-callers-to-enable-IOMMU-SNP-sup
+	patches.suse/x86-sev-Add-SEV-SNP-host-initialization-support
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
