--- a/series.conf
+++ b/series.conf
@@ -16262,6 +16262,7 @@
 	patches.suse/cpufreq-amd-pstate-Fix-setting-scaling-max-min-freq-.patch
 	patches.suse/platform-x86-intel-uncore-freq-Fix-types-in-sysfs-ca.patch
 	patches.suse/platform-x86-intel-ifs-Call-release_firmware-when-ha.patch
+	patches.suse/x86-CPU-AMD-Add-X86_FEATURE_ZEN5
 	patches.suse/clocksource-Skip-watchdog-check-for-large-watchdog-i.patch
 	patches.suse/genirq-Initialize-resend_node-hlist-for-all-interrup.patch
 	patches.suse/cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
