x86/speculation: Do not enable Automatic IBRS if SEV-SNP is enabled (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16348,6 +16348,7 @@
 	patches.suse/x86-mm-Fix-memory-encryption-features-advertisement
 	patches.suse/x86-sme-Fix-memory-encryption-setting-if-enabled-by-default-and-
 	patches.suse/x86-cpufeatures-Add-SEV-SNP-CPU-feature
+	patches.suse/x86-speculation-Do-not-enable-Automatic-IBRS-if-SEV-SNP-is-enabl
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
