--- a/series.conf
+++ b/series.conf
@@ -15074,6 +15074,7 @@
 	patches.suse/x86-CPU-AMD-Move-the-DIV0-bug-detection-to-the-Zen1-init-functio
 	patches.suse/x86-CPU-AMD-Get-rid-of-amd_erratum_1054
 	patches.suse/x86-CPU-AMD-Get-rid-of-amd_erratum_383
+	patches.suse/x86-CPU-AMD-Get-rid-of-amd_erratum_400
 	patches.suse/x86-mce-inject-Clear-test-status-value.patch
 	patches.suse/x86-mce-amd-EDAC-mce_amd-Move-long-names-to-decoder-module.patch
 	patches.suse/EDAC-mce_amd-Remove-SMCA-Extended-Error-code-descriptions.patch
