x86/cpufeatures: Enable/unmask SEV-SNP CPU feature (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16368,6 +16368,7 @@
 	patches.suse/iommu-amd-Clean-up-RMP-entries-for-IOMMU-pages-during-SNP-shutdo
 	patches.suse/crypto-ccp-Add-panic-notifier-for-SEV-SNP-firmware-shutdown-on-k
 	patches.suse/KVM-SEV-Make-AVIC-backing-VMSA-and-VMCB-memory-allocation-SNP-sa
+	patches.suse/x86-cpufeatures-Enable-unmask-SEV-SNP-CPU-feature
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
