iommu/amd: Clean up RMP entries for IOMMU pages during SNP shutdown (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16365,6 +16365,7 @@
 	patches.suse/crypto-ccp-Handle-the-legacy-TMR-allocation-when-SNP-is-enabled
 	patches.suse/crypto-ccp-Handle-non-volatile-INIT_EX-data-when-SNP-is-enabled
 	patches.suse/crypto-ccp-Handle-legacy-SEV-commands-when-SNP-is-enabled
+	patches.suse/iommu-amd-Clean-up-RMP-entries-for-IOMMU-pages-during-SNP-shutdo
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
