x86/CPU/AMD: Call the spectral chicken in the Zen2 init function (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -15068,6 +15068,7 @@
 	patches.suse/x86-CPU-AMD-Carve-out-the-erratum-1386-fix
 	patches.suse/x86-CPU-AMD-Move-the-Zen3-BTC_NO-detection-to-the-Zen3-init-func
 	patches.suse/x86-CPU-AMD-Move-erratum-1076-fix-into-the-Zen1-init-function
+	patches.suse/x86-CPU-AMD-Call-the-spectral-chicken-in-the-Zen2-init-function
 	patches.suse/x86-mce-inject-Clear-test-status-value.patch
 	patches.suse/x86-mce-amd-EDAC-mce_amd-Move-long-names-to-decoder-module.patch
 	patches.suse/EDAC-mce_amd-Remove-SMCA-Extended-Error-code-descriptions.patch
