x86/mm: Fix memory encryption features advertisement (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16345,6 +16345,7 @@
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
+	patches.suse/x86-mm-Fix-memory-encryption-features-advertisement
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
