crypto: ccp: Handle legacy SEV commands when SNP is enabled (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16364,6 +16364,7 @@
 	patches.suse/x86-sev-Introduce-an-SNP-leaked-pages-list
 	patches.suse/crypto-ccp-Handle-the-legacy-TMR-allocation-when-SNP-is-enabled
 	patches.suse/crypto-ccp-Handle-non-volatile-INIT_EX-data-when-SNP-is-enabled
+	patches.suse/crypto-ccp-Handle-legacy-SEV-commands-when-SNP-is-enabled
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
