x86/CPU/AMD: Carve out the erratum 1386 fix (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -15065,6 +15065,7 @@
 	patches.suse/x86-barrier-Do-not-serialize-MSR-accesses-on-AMD
 	patches.suse/x86-cpu-intel_epb-Don-t-rely-on-link-order
 	patches.suse/x86-CPU-AMD-Add-ZenX-generations-flags
+	patches.suse/x86-CPU-AMD-Carve-out-the-erratum-1386-fix
 	patches.suse/x86-mce-inject-Clear-test-status-value.patch
 	patches.suse/x86-mce-amd-EDAC-mce_amd-Move-long-names-to-decoder-module.patch
 	patches.suse/EDAC-mce_amd-Remove-SMCA-Extended-Error-code-descriptions.patch
