x86/sev: Adjust the directmap to avoid inadvertent RMP faults (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16357,6 +16357,7 @@
 	patches.suse/x86-traps-Define-RMP-violation-PF-error-code
 	patches.suse/x86-fault-Dump-RMP-table-information-when-RMP-page-faults-occur
 	patches.suse/x86-sev-Add-helper-functions-for-RMPUPDATE-and-PSMASH-instructio
+	patches.suse/x86-sev-Adjust-the-directmap-to-avoid-inadvertent-RMP-faults
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
