crypto: ccp: Add the SNP_COMMIT command (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -16370,6 +16370,7 @@
 	patches.suse/KVM-SEV-Make-AVIC-backing-VMSA-and-VMCB-memory-allocation-SNP-sa
 	patches.suse/x86-cpufeatures-Enable-unmask-SEV-SNP-CPU-feature
 	patches.suse/crypto-ccp-Add-the-SNP_PLATFORM_STATUS-command
+	patches.suse/crypto-ccp-Add-the-SNP_COMMIT-command
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
