--- a/series.conf
+++ b/series.conf
@@ -16355,6 +16355,7 @@
 	patches.suse/x86-sev-Add-RMP-entry-lookup-helpers
 	patches.suse/x86-fault-Add-helper-for-dumping-RMP-entries
 	patches.suse/x86-traps-Define-RMP-violation-PF-error-code
+	patches.suse/x86-fault-Dump-RMP-table-information-when-RMP-page-faults-occur
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
