--- a/series.conf
+++ b/series.conf
@@ -16358,6 +16358,7 @@
 	patches.suse/x86-fault-Dump-RMP-table-information-when-RMP-page-faults-occur
 	patches.suse/x86-sev-Add-helper-functions-for-RMPUPDATE-and-PSMASH-instructio
 	patches.suse/x86-sev-Adjust-the-directmap-to-avoid-inadvertent-RMP-faults
+	patches.suse/crypto-ccp-Define-the-SEV-SNP-commands
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
