--- a/series.conf
+++ b/series.conf
@@ -16347,6 +16347,7 @@
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
 	patches.suse/x86-mm-Fix-memory-encryption-features-advertisement
 	patches.suse/x86-sme-Fix-memory-encryption-setting-if-enabled-by-default-and-
+	patches.suse/x86-cpufeatures-Add-SEV-SNP-CPU-feature
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
