drm/amdgpu: Let KFD sync with VM fences (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -44952,6 +44952,7 @@
 	patches.suse/drm-Don-t-unref-the-same-fb-many-times-by-mistake-du.patch
 	patches.suse/drm-amd-display-make-flip_timestamp_in_us-a-64-bit-v.patch
 	patches.suse/drm-amdgpu-Fix-ecc-irq-enable-disable-unpaired.patch
+	patches.suse/drm-amdgpu-Let-KFD-sync-with-VM-fences.patch
 	patches.suse/drm-amdkfd-Confirm-list-is-non-empty-before-utilizin.patch
 	patches.suse/drm-amd-pm-smu7-fix-a-memleak-in-smu7_hwmgr_backend_.patch
 	patches.suse/ASoC-cs35l33-Fix-GPIO-name-and-drop-legacy-include.patch
