--- a/series.conf
+++ b/series.conf
@@ -45060,6 +45060,7 @@
 	patches.suse/apparmor-avoid-crash-when-parsed-profile-name-is-emp.patch
 	patches.suse/power-supply-bq256xx-fix-some-problem-in-bq256xx_hw_.patch
 	patches.suse/power-supply-cw2015-correct-time_to_empty-units-in-s.patch
+	patches.suse/drm-amdkfd-Fix-lock-dependency-warning.patch
 	patches.suse/drm-amdkfd-fixes-for-HMM-mem-allocation.patch
 	patches.suse/drm-amd-display-Port-DENTIST-hang-and-TDR-fixes-to-O.patch
 	patches.suse/nouveau-vmm-don-t-set-addr-on-the-fail-path-to-avoid.patch
