--- a/series.conf
+++ b/series.conf
@@ -44944,6 +44944,7 @@
 	patches.suse/drm-msm-dsi-Enable-runtime-PM.patch
 	patches.suse/drm-msm-dpu-Ratelimit-framedone-timeout-msgs.patch
 	patches.suse/drm-msm-dpu-rename-dpu_encoder_phys_wb_setup_cdp-to-.patch
+	patches.suse/drm-msm-dpu-fix-writeback-programming-for-YUV-cases.patch
 	patches.suse/drm-msm-dpu-Set-input_sel-bit-for-INTF.patch
 	patches.suse/drm-msm-dpu-Drop-enable-and-frame_count-parameters-f.patch
 	patches.suse/drm-mediatek-Return-error-if-MDP-RDMA-failed-to-enab.patch
