--- a/series.conf
+++ b/series.conf
@@ -45101,6 +45101,7 @@
 	patches.suse/Input-bcm5974-check-endpoint-type-before-starting-tr.patch
 	patches.suse/Input-atkbd-skip-ATKBD_CMD_SETLEDS-when-skipping-ATK.patch
 	patches.suse/Input-atkbd-do-not-skip-atkbd_deactivate-when-skippi.patch
+	patches.suse/drm-amdgpu-Fix-missing-error-code-in-gmc_v6-7-8-9_0_.patch
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-returning-wrong-error.patch
 	patches.suse/phy-ti-phy-omap-usb2-Fix-NULL-pointer-dereference-fo.patch
 	patches.suse/dmaengine-fsl-dpaa2-qdma-Fix-the-size-of-dma-pools.patch
