--- a/series.conf
+++ b/series.conf
@@ -44958,6 +44958,7 @@
 	patches.suse/drm-amdgpu-Drop-fence-check-in-to_amdgpu_amdkfd_fenc.patch
 	patches.suse/drm-amdkfd-Fix-iterator-used-outside-loop-in-kfd_add.patch
 	patches.suse/drm-amd-pm-smu7-fix-a-memleak-in-smu7_hwmgr_backend_.patch
+	patches.suse/ALSA-hda-Refer-to-correct-stream-index-at-loops.patch
 	patches.suse/ASoC-cs35l33-Fix-GPIO-name-and-drop-legacy-include.patch
 	patches.suse/ASoC-Intel-glk_rt5682_max98357a-fix-board-id-mismatc.patch
 	patches.suse/ASoC-amd-acp-config-Add-missing-MODULE_DESCRIPTION.patch
