drm/panel-edp: Add override_edid_mode quirk for generic edp (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -44916,6 +44916,7 @@
 	patches.suse/drm-radeon-r100-Fix-integer-overflow-issues-in-r100_.patch
 	patches.suse/drm-radeon-check-return-value-of-radeon_ring_lock.patch
 	patches.suse/drm-bridge-Fix-typo-in-post_disable-description.patch
+	patches.suse/drm-panel-edp-Add-override_edid_mode-quirk-for-gener.patch
 	patches.suse/drm-tidss-Move-reset-to-the-end-of-dispc_init.patch
 	patches.suse/drm-tidss-Return-error-value-from-from-softreset.patch
 	patches.suse/drm-tidss-Check-for-K2G-in-in-dispc_softreset.patch
