--- a/series.conf
+++ b/series.conf
@@ -44911,6 +44911,7 @@
 	patches.suse/drm-nouveau-fence-fix-warning-directly-dereferencing.patch
 	patches.suse/drm-bridge-tpd12s015-Drop-buggy-__exit-annotation-fo.patch
 	patches.suse/drm-tilcdc-Fix-irq-free-on-unload.patch
+	patches.suse/drm-amd-display-Fix-tiled-display-misalignment.patch
 	patches.suse/drm-radeon-r600_cs-Fix-possible-int-overflows-in-r60.patch
 	patches.suse/drm-radeon-r100-Fix-integer-overflow-issues-in-r100_.patch
 	patches.suse/drm-radeon-check-return-value-of-radeon_ring_lock.patch
