--- a/series.conf
+++ b/series.conf
@@ -44964,6 +44964,7 @@
 	patches.suse/ASoC-amd-acp-config-Add-missing-MODULE_DESCRIPTION.patch
 	patches.suse/ASoC-amd-acp-Add-missing-MODULE_DESCRIPTION-in-mach-.patch
 	patches.suse/ASoC-rt5645-Drop-double-EF20-entry-from-dmi_platform.patch
+	patches.suse/ALSA-hda-conexant-Fix-headset-auto-detect-fail-in-cx.patch
 	patches.suse/ALSA-hda-realtek-Fix-mute-and-mic-mute-LEDs-for-HP-E.patch
 	patches.suse/watchdog-set-cdev-owner-before-adding.patch
 	patches.suse/watchdog-hpwdt-Only-claim-UNKNOWN-NMI-if-from-iLO.patch
