--- a/series.conf
+++ b/series.conf
@@ -45064,6 +45064,7 @@
 	patches.suse/drm-amdkfd-Fix-lock-dependency-warning-with-srcu.patch
 	patches.suse/drm-amdkfd-fixes-for-HMM-mem-allocation.patch
 	patches.suse/drm-amd-powerplay-Fix-kzalloc-parameter-ATOM_Tonga_P.patch
+	patches.suse/drm-amdgpu-Fix-with-right-return-code-EIO-in-amdgpu_.patch
 	patches.suse/drm-amd-display-Port-DENTIST-hang-and-TDR-fixes-to-O.patch
 	patches.suse/nouveau-vmm-don-t-set-addr-on-the-fail-path-to-avoid.patch
 	patches.suse/ALSA-oxygen-Fix-right-channel-of-capture-volume-mixe.patch
