--- a/series.conf
+++ b/series.conf
@@ -44942,6 +44942,7 @@
 	patches.suse/drm-msm-mdp4-flush-vblank-event-on-disable.patch
 	patches.suse/drm-msm-dsi-Use-pm_runtime_resume_and_get-to-prevent.patch
 	patches.suse/drm-msm-dsi-Enable-runtime-PM.patch
+	patches.suse/drm-msm-dpu-Ratelimit-framedone-timeout-msgs.patch
 	patches.suse/drm-msm-dpu-rename-dpu_encoder_phys_wb_setup_cdp-to-.patch
 	patches.suse/drm-msm-dpu-Set-input_sel-bit-for-INTF.patch
 	patches.suse/drm-msm-dpu-Drop-enable-and-frame_count-parameters-f.patch
