--- a/series.conf
+++ b/series.conf
@@ -14756,6 +14756,7 @@
 	patches.suse/xfs-initialise-di_crc-in-xfs_log_dinode.patch
 	patches.suse/xfs-add-missing-nrext64-inode-flag-check-to-scrub.patch
 	patches.suse/gfs2-Fix-kernel-NULL-pointer-dereference-in-gfs2_rgrp_dump.patch
+	patches.suse/FS-JFS-UBSAN-array-index-out-of-bounds-in-dbAdjTree.patch
 	patches.suse/dlm-use-kernel_connect-and-kernel_bind.patch
 	patches.suse/dlm-fix-format-seq-ops-type-4.patch
 	patches.suse/pstore-ram_core-fix-possible-overflow-in-persistent_.patch
