afs: fix the usage of read_seqbegin_or_lock() in afs_lookup_volume_rcu() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14762,6 +14762,7 @@
 	patches.suse/jfs-fix-array-index-out-of-bounds-in-dbAdjTree.patch
 	patches.suse/jfs-fix-uaf-in-jfs_evict_inode.patch
 	patches.suse/jfs-fix-array-index-out-of-bounds-in-diNewExt.patch
+	patches.suse/afs-fix-the-usage-of-read_seqbegin_or_lock-in-afs_lookup_volume_rcu.patch
 	patches.suse/dlm-use-kernel_connect-and-kernel_bind.patch
 	patches.suse/dlm-fix-format-seq-ops-type-4.patch
 	patches.suse/pstore-ram_core-fix-possible-overflow-in-persistent_.patch
