x86/CPU/AMD: Add X86_FEATURE_ZEN1 (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -15077,6 +15077,7 @@
 	patches.suse/x86-CPU-AMD-Get-rid-of-amd_erratum_400
 	patches.suse/x86-CPU-AMD-Get-rid-of-amd_erratum_1485
 	patches.suse/x86-CPU-AMD-Drop-now-unused-CPU-erratum-checking-function
+	patches.suse/x86-CPU-AMD-Add-X86_FEATURE_ZEN1
 	patches.suse/x86-mce-inject-Clear-test-status-value.patch
 	patches.suse/x86-mce-amd-EDAC-mce_amd-Move-long-names-to-decoder-module.patch
 	patches.suse/EDAC-mce_amd-Remove-SMCA-Extended-Error-code-descriptions.patch
