KVM: x86: add missing "depends on KVM" (jsc#PED-5122).

--- a/series.conf
+++ b/series.conf
@@ -15974,6 +15974,7 @@
 	patches.suse/KVM-x86-Add-support-for-protected-VMs-that-can-utilize-private-m
 	patches.suse/KVM-guest-memfd-fix-unused-function-warning
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
+	patches.suse/KVM-x86-add-missing-depends-on-KVM
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
 	patches.suse/mfd-intel-lpss-Revert-Add-missing-check-for-platform.patch
