- KVM: Convert KVM_ARCH_WANT_MMU_NOTIFIER to   CONFIG_KVM_GENERIC_MMU_NOTIFIER (jsc#PED-5122). - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -15957,6 +15957,7 @@
 	patches.suse/KVM-WARN-if-there-are-dangling-MMU-invalidations-at-VM-destructi
 	patches.suse/KVM-PPC-Drop-dead-code-related-to-KVM_ARCH_WANT_MMU_NOTIFIER
 	patches.suse/KVM-PPC-Return-1-unconditionally-for-KVM_CAP_SYNC_MMU
+	patches.suse/KVM-Convert-KVM_ARCH_WANT_MMU_NOTIFIER-to-CONFIG_KVM_GENERIC_MMU
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
