mm: fs: initialize fsdata passed to write_begin/write_end interface (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -36443,6 +36443,7 @@
 	patches.suse/mm-reuse-pageblock_start-end_pfn-macro.patch
 	patches.suse/mm-add-pageblock_align-macro.patch
 	patches.suse/mm-add-pageblock_aligned-macro.patch
+	patches.suse/mm-fs-initialize-fsdata-passed-to-write_begin-write_end-interface.patch
 	patches.suse/cifs-misc-fix-spelling-typo-in-comment.patch
 	patches.suse/cifs-return-correct-error-in-calc_signature-.patch
 	patches.suse/cifs-destage-dirty-pages-before-re-reading-them-for-cache-none.patch
