fs: don't audit the capability check in simple_xattr_list() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -37959,6 +37959,7 @@
 	patches.suse/ext4-fix-inode-leak-in-ext4_xattr_inode_create-on-an.patch
 	patches.suse/ext4-fix-reserved-cluster-accounting-in-__es_remove_.patch
 	patches.suse/fuse-always-revalidate-rename-target-dentry.patch
+	patches.suse/fs-don-t-audit-the-capability-check-in-simple_xattr_list.patch
 	patches.suse/udf-Avoid-double-brelse-in-udf_rename.patch
 	patches.suse/udf-Fix-preallocation-discarding-at-indirect-extent-.patch
 	patches.suse/udf-Do-not-bother-looking-for-prealloc-extents-if-i_.patch
