aio: fix mremap after fork null-deref (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -39577,6 +39577,7 @@
 	patches.suse/powerpc-64s-interrupt-Fix-interrupt-exit-race-with-s.patch
 	patches.suse/usb-typec-altmodes-displayport-Fix-probe-pin-assign-.patch
 	patches.suse/usb-core-add-quirk-for-Alcor-Link-AK9563-smartcard-r.patch
+	patches.suse/aio-fix-mremap-after-fork-null-deref.patch
 	patches.suse/revert-squashfs-harden-sanity-check-in-squashfs_read.patch
 	patches.suse/of-reserved_mem-Have-kmemleak-ignore-dynamically-allocated-reserved-mem.patch
 	patches.suse/x86-speculation-identify-processors-vulnerable-to-smt-rsb-predictions.patch
