fs: drop peer group ids under namespace lock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -40931,6 +40931,7 @@
 	patches.suse/btrfs-fix-race-between-quota-disable-and-quota-assig.patch
 	patches.suse/msft-hv-2770-Drivers-vmbus-Check-for-channel-allocation-before-lo.patch
 	patches.suse/msft-hv-2773-x86-hyperv-Block-root-partition-functionality-in-a-C.patch
+	patches.suse/fs-drop-peer-group-ids-under-namespace-lock.patch
 	patches.suse/NFSD-Avoid-calling-OPDESC-with-ops-opnum-OP_ILLEGAL.patch
 	patches.suse/nfsd-call-op_release-even-when-op_func-returns-an-er.patch
 	patches.suse/sunrpc-only-free-unix-grouplist-after-RCU-settles.patch
