shmem: use ramfs_kill_sb() for kill_sb method of ramfs-based tmpfs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -42300,6 +42300,7 @@
 	patches.suse/integrity-Fix-possible-multiple-allocation-in-integr.patch
 	patches.suse/elf-correct-note-name-comment.patch
 	patches.suse/pstore-ram-Add-check-for-kstrdup.patch
+	patches.suse/shmem-use-ramfs_kill_sb-for-kill_sb-method-of-ramfs-based-tmpfs.patch
 	patches.suse/regulator-core-Fix-more-error-checking-for-debugfs_c.patch
 	patches.suse/regulator-core-Streamline-debugfs-operations.patch
 	patches.suse/regulator-helper-Document-ramp_delay-parameter-of-re.patch
