fs: Fix error checking for d_hash_and_lookup() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43264,6 +43264,7 @@
 	patches.suse/reiserfs-Check-the-return-value-from-__getblk.patch
 	patches.suse/eventfd-prevent-underflow-for-eventfd-semaphores.patch
 	patches.suse/attr-block-mode-changes-of-symlinks.patch
+	patches.suse/fs-Fix-error-checking-for-d_hash_and_lookup.patch
 	patches.suse/locks-fix-KASAN-use-after-free-in-trace_event_raw_event_filelock_lock.patch
 	patches.suse/pstore-ram-Check-start-of-empty-przs-during-init.patch
 	patches.suse/selftests-harness-Actually-report-SKIP-for-signal-te.patch
