tracefs: Add missing lockdown check to tracefs_create_dir() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43786,6 +43786,7 @@
 	patches.suse/platform-mellanox-mlxbf-tmfifo-Drop-jumbo-frames.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Fix-potential-buffer-ove.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Fix-reading-of-unprogram.patch
+	patches.suse/tracefs-Add-missing-lockdown-check-to-tracefs_create_dir.patch
 	patches.suse/tracing-Have-tracing_max_latency-inc-the-trace-array-ref-count.patch
 	patches.suse/tracing-Have-current_trace-inc-the-trace-array-ref-count.patch
 	patches.suse/tracing-Have-option-files-inc-the-trace-array-ref-count.patch
