RAS: Introduce AMD Address Translation Library (jsc#PED-7618).

--- a/series.conf
+++ b/series.conf
@@ -16428,6 +16428,9 @@
 	patches.suse/crypto-ccp-Add-the-SNP_COMMIT-command
 	patches.suse/crypto-ccp-Add-the-SNP_SET_CONFIG-command
 
+	# ras/ras edac-for-next
+	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
+
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
 	patches.suse/fnic-move-fnic_fnic_flush_tx-to-a-work-queue.patch
