EDAC/amd64: Use new AMD Address Translation Library (jsc#PED-7618).

--- a/series.conf
+++ b/series.conf
@@ -16430,6 +16430,7 @@
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
+	patches.suse/EDAC-amd64-Use-new-AMD-Address-Translation-Library.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
