EDAC/amd64: Use new AMD Address Translation Library (jsc#PED-7618).

--- a/series.conf
+++ b/series.conf
@@ -45137,6 +45137,7 @@
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
+	patches.suse/EDAC-amd64-Use-new-AMD-Address-Translation-Library.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
