RAS/AMD/ATL: Add MI300 support (jsc#PED-7618).

--- a/series.conf
+++ b/series.conf
@@ -16432,6 +16432,7 @@
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
 	patches.suse/EDAC-amd64-Use-new-AMD-Address-Translation-Library.patch
 	patches.suse/Documentation-RAS-Add-index-and-address-translation-sectio.patch
+	patches.suse/RAS-AMD-ATL-Add-MI300-support.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
